# juliet

./: README.md  meson.build
include/juliet/: ascii_renderer.hpp  color.hpp  common.hpp  includes.hpp  juliet.hpp  render.hpp  renderer_thread_pool.hpp  rgb_renderer.hpp  sets.hpp  type_aliases.hpp  viewer.hpp
source/: main.cpp
subprojects/fpng/: meson.build
